# Bindingc

./: .gitignore  CMakeLists.txt  README.md
include/bindingc/: base.h  bindingtypes.h  filter.h  log.h  parse.h  parsedtypes.h  parsetypes.h  reflectionc.h  sort.h  tpyes.h  types.h
include/bindingc/py3/: generate.h  types.h
include/bindingc/utilc/: alloc.h  dynarray.h  iterator.h  strviu.h
include/utilc/: dynarray.h  scope.h  strviu.h
src/: bindingtypes.c  filter.c  log.c  parse.c  parse_file.c  parsefile.c  parsetypes.c  reflectionc.c  sort.c  types.c
src/py3/: generate.c  parsedtypes.c  types.c
tests/: filtertest.c  generatetest.c  main.c  parsetest.c  prototype.c  test.c  test_generate.c  test_helper.h  test_py3_base.c
tests/data/: filetest1.txt
tests/data/py3_base/: CMakeLists.txt  base_binding.py  base_header.h  base_lib.c  base_test.py
